--- a/package.json
+++ b/package.json
@@ -12,34 +12,13 @@
     "test:watch": "npm run test -- --watch"
   },
   "author": "Patrik Oldsberg <patrik.oldsberg@ericsson.com>",
-  "devDependencies": {
+  "dependencies": {
     "@cct/libcct": "0.18.0-rc1",
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-lodash": "^2.2.1",
-    "babel-plugin-module-alias": "^1.2.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.4.0",
-    "eslint-plugin-react": "^4.2.3",
-    "eslint-watch": "^2.1.10",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.10.0",
     "html2canvas": "^0.5.0-beta4",
-    "image-webpack-loader": "^1.6.3",
-    "jsdom": "^8.1.0",
     "jspdf": "^1.2.61",
     "lodash": "^4.6.1",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
     "object-assign": "^4.0.1",
     "pdfjs-dist": "^1.4.225",
-    "postcss-loader": "^0.8.2",
     "react": "0.14.x",
     "react-addons-css-transition-group": "0.14.x",
     "react-addons-test-utils": "0.14.x",
@@ -60,7 +39,30 @@
     "redux-logger": "^2.6.1",
     "redux-mock-store": "^1.0.2",
     "redux-slider-monitor": "^1.0.3",
-    "redux-thunk": "^2.0.1",
+    "redux-thunk": "^2.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-lodash": "^2.2.1",
+    "babel-plugin-module-alias": "^1.2.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.4.0",
+    "eslint-plugin-react": "^4.2.3",
+    "eslint-watch": "^2.1.10",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.10.0",
+    "image-webpack-loader": "^1.6.3",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.2",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.6.1",
