--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "description": "Web Meeting PoC",
   "scripts": {
     "serve": "webpack-dev-server --config webpack/dev.config.js --progress",
-    "build": "rm -r dist; webpack --config webpack/prod.config.js --progress",
+    "build": "set NODE_ENV=production&&webpack --mode production --config webpack/prod.config.js --progress",
+    "build:dev": "webpack --config webpack/dev.config.js --progress",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "lint:watch": "esw --watch",
-    "test": "mocha --compilers js:babel-core/register --require ./src/test/setup.js 'src/test/**/*_test.js'",
+    "test": "mocha --compilers js:@babel/register --require ./src/test/setup.js 'src/test/**/*_test.js'",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Patrik Oldsberg <patrik.oldsberg@ericsson.com>",
   "dependencies": {
-    "@cct/libcct": "^0.23.4-rc8.0",
+    "@cct/libcct": "^0.23.4-rc9.0",
     "html2canvas": "^0.5.0-beta4",
     "jspdf": "^1.2.61",
     "lodash": "^4.17.15",
     "object-assign": "^4.0.1",
     "pdfjs-dist": "^1.4.225",
-    "react": "0.14.x",
-    "react-addons-css-transition-group": "0.14.x",
-    "react-addons-test-utils": "0.14.x",
-    "react-dom": "0.14.x",
-    "react-fa": "^4.0.0",
+    "react": "^15.6.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-fa": "^5.0.0",
     "react-flip-move": "^1.4.1",
     "react-helmet": "^2.3.1",
-    "react-notifications": "^1.0.1",
+    "react-notifications": "^1.4.3",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
@@ -42,34 +43,36 @@
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-lodash": "^2.2.1",
-    "babel-plugin-module-alias": "^1.2.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.6.2",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-module-resolver": "^3.2.0",
     "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.4.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.1",
     "eslint-plugin-react": "^4.2.3",
-    "eslint-watch": "^2.1.10",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.10.0",
-    "image-webpack-loader": "^1.6.3",
+    "eslint-watch": "^6.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "jsdom": "^8.1.0",
     "mocha": "^5.2.0",
-    "node-sass": "^3.4.2",
-    "postcss-loader": "^0.8.2",
-    "resolve-url-loader": "^1.4.3",
-    "sass-loader": "^3.2.0",
-    "script-loader": "^0.6.1",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5",
+    "node-sass": "^4.12.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
+    "script-loader": "^0.7.2",
+    "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
     "webpack-error-notification": "^0.1.6"
   },
   "private": true
